{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "War",
            "id": "0f2597a3-dbd1-4165-b337-12af10b28cb9",
            "actions": [
                {
                    "name": "Walk",
                    "type": "PassThrough",
                    "id": "9bb6f171-2014-4546-8986-b663b91aa237",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slash0",
                    "type": "Button",
                    "id": "e52a5759-a02d-42c5-b578-74fb5f6c6032",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "5474fba4-6dea-48c8-8d2d-04af02b4115f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c820c1a3-9406-42e7-84ff-5b7e0bc91c6d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4403fe40-acec-4de9-9b8b-da773675d42a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0ac5be10-ee3c-4c74-9799-66457d2cbfae",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2528323e-6f87-4bd9-b771-ac6f24a38aab",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f3c4e030-3552-467e-a0b8-5076ca748df7",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slash0",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}